--- a/vercel.json
+++ b/vercel.json
@@ -8,11 +8,11 @@
     "rewrites": [
         {
             "source": "/api/:path*",
-            "destination": "https://unwisely-unaudited-lovetta.ngrok-free.dev/:path*"
+            "destination": "http://8.148.244.222:8080/api/:path*"
         },
         {
             "source": "/ws/:path*",
-            "destination": "https://unwisely-unaudited-lovetta.ngrok-free.dev/ws/:path*"
+            "destination": "http://8.148.244.222:8080/ws/:path*"
         },
         {
             "source": "/baidu-token",
