--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
     "rewrites": [
         {
             "source": "/api/:path*",
-            "destination": "http://8.148.244.222:8080/api/:path*"
+            "destination": "http://8.148.244.222:8080/:path*"
         },
         {
             "source": "/ws/:path*",
